# EXPLORER

./: .gitignore  CLAUDE.md  README.md  buildex_agent_plan.md  pyproject.toml  pyxplorer_agent_plan.md
.claude/: settings.local.json
buildex/: app.py  keybindings.py  main.py  settings.py  state.py
buildex/core/: fs.py  scanner.py  search.py
buildex/ui/: left_panel.py  main_frame.py  status_bar.py  top_bar.py
pyxplorer/: app.py  keybindings.py  logging.py  main.py  settings.json  settings.py  state.py
pyxplorer/core/: appdirs.py  archive.py  fs.py  heuristics.py  longpath.py  ocr.py  scanner.py  search.py  shared_clipboard.py  starred.py  tags.py  user_files.py
pyxplorer/ui/: embedded_terminal.py  help_window.py  heuristics_window.py  icons.py  image_viewer.py  left_panel.py  lower_panel.py  main_frame.py  pdf_viewer.py  scroll_utils.py  search_dialog.py  status_bar.py  temp_notepad.py  top_bar.py
