
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxplorer"
version = "0.1.0"
dependencies = [
	"Pillow",
	"PyMuPDF",
	"pytesseract",
	"ptyprocess",
	"tkinterdnd2",
	"pywinpty; sys_platform == 'win32'",
	"pywin32; sys_platform == 'win32'",
]

[project.scripts]
pyxplorer = "pyxplorer.main:main"
